@startuml

skinparam linetype ortho

entity "calendarios" as cld{
    *cld_id: bigint <<generated>> <<PK>>
    *cld_tipo: varchar(255) NOT NULL
}

entity "calendario_infante" as cnñ{
    *cld_id: bigint <<generated>> <<PK>>
    *cld_id: bigint <<FK>>
}

entity "calendario_adultos" as cdt{
    *cld_id: bigint <<generated>> <<PK>>
    *cld_id: bigint <<FK>>
}

entity "calendario_embarazadas" as cbz{
    *cld_id: bigint <<generated>> <<PK>>
    *cld_id: bigint <<FK>>
}

entity "vacunas_rangoEdades" as vre{
    *vre_id: bigint <<generated>> <<PK>>
	*vre_cld_id: bigint <<FK>>
    *vre_ede_id: bigint <<FK>>
    *vre_vcn_id: bigint <<FK>>
}

entity "vacunas" as vcn{
    *vcn_id: bigint <<generated>> <<PK>>
    *vcn_nombre: varchar(255) NOT NULL
    *vcn_descripcion: varchar(255) NOT NULL
    *vcn_estado: varchar(255) NOT NULL
}

entity "rango_edades" as ede{
    *ede_id: bigint <<generated>> <<PK>>
    *ede_nombre: varchar(255) NOT NULL
}

cld ||-up-|| cnñ
cld ||-left-|| cdt
cld ||-right-|| cbz


cld ||--|| vre
vre ||--|| ede
vre ||--|| vcn

@enduml